# notion-dbs-data-quality

./: .gitignore  README.md  pyproject.toml
.github/workflows/: qa.yml  test.yml
great_expectations/: great_expectations.yml
great_expectations/expectations/: example_3_columns_and_2_languages.json  example_no_null_columns.json
src/: build_data_source.py  build_expectations.ipynb  check_connection.py  validate.py
src/Notion/: NotionAPI.py  NotionPage.py
