[tool.poetry]
name = "notion-dbs-data-quality"
version = "0.1.0"
description = "Bringing data quality to your Notion DBs"
authors = ["Ricardo Elizondo <ricardo@dataroots.io>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
"ruamel.yaml" = "^0.17.17"
great-expectations = "^0.13.40"
black = "^21.10b0"
isort = "^5.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
